# spm

./: CMakeLists.txt  Project Report.docx  README.md  build.sh  future.cpp  main.cpp  nonOrdparallel.cpp  parallel.cpp  parallel2.cpp  parallel3.cpp  sequential.cpp  test.sh  threaded.cpp  ~$oject Report.docx  ~WRL3410.tmp
