cmake_minimum_required(VERSION 2.8)
project( parallel )
find_package( OpenCV REQUIRED )
include_directories("./../fastflow")
add_definitions(-std=c++11)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3 -pthread")
add_executable( parallel2 parallel2.cpp )
add_executable( sequential sequential.cpp )
add_executable( parallel3 parallel3.cpp )
add_executable( threaded threaded.cpp )
add_executable( future future.cpp )
target_link_libraries( parallel2 ${OpenCV_LIBS} )
target_link_libraries( sequential ${OpenCV_LIBS} )
target_link_libraries( parallel3 ${OpenCV_LIBS} )
target_link_libraries( threaded ${OpenCV_LIBS} )
target_link_libraries( future ${OpenCV_LIBS} )


